<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@color/background_2"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    tools:context=".segundaApp.SecondAppActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/hombre"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/widget_bg_1_selected"
        app:cardCornerRadius="20dp"

        app:layout_constraintEnd_toStartOf="@+id/mujer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/descImgHombre"
                android:src="@drawable/ic_male" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hombre"
                android:textAllCaps="true"
                android:textColor="@color/btn_text_1"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mujer"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/widget_bg_1"
        app:cardCornerRadius="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hombre"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/descImgMujer"
                android:src="@drawable/ic_female" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mujer"
                android:textAllCaps="true"
                android:textColor="@color/btn_text_1"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/altura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/widget_bg_1"
        app:cardCornerRadius="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hombre">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/altura"
                android:textAllCaps="true"
                android:textColor="@color/btn_text_1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/marcadorAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/alturaPorDefecto"
                android:textColor="@color/btn_text_1"
                android:textSize="38sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/deslizadorAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="215" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/peso"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/widget_bg_1"
        app:cardCornerRadius="20dp"

        app:layout_constraintEnd_toStartOf="@id/edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/altura">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/peso"
                android:textAllCaps="true"
                android:textColor="@color/btn_text_1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/marcadorPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:textColor="@color/btn_text_1"
                android:textSize="38sp"
                android:textStyle="bold"
                tools:text="60 kg" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/restarPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:backgroundTint="@color/btn_background_1"

                    android:contentDescription="@string/descImgRestar"
                    android:src="@drawable/restar"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/sumarPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:backgroundTint="@color/btn_background_1"

                    android:contentDescription="@string/descImgSumar"
                    android:src="@drawable/sumar"
                    app:tint="@color/white" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/edad"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/widget_bg_1"
        app:cardCornerRadius="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/peso"
        app:layout_constraintTop_toBottomOf="@id/altura">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/edad"
                android:textAllCaps="true"
                android:textColor="@color/btn_text_1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/marcadorEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:textColor="@color/btn_text_1"
                android:textSize="38sp"
                android:textStyle="bold"
                tools:text="25 años" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/restarEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:backgroundTint="@color/btn_background_1"

                    android:contentDescription="@string/descImgRestar"
                    android:src="@drawable/restar"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/sumarEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:backgroundTint="@color/btn_background_1"

                    android:contentDescription="@string/descImgSumar"
                    android:src="@drawable/sumar"
                    app:tint="@color/white" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnResultado"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/btn_background_1"

        android:text="@string/obtenerIMC"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/peso" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="22sp"
        android:layout_marginHorizontal="15dp"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnResultado"

        tools:text="IMC: 10. Tu estado es de infrapeso." />

</androidx.constraintlayout.widget.ConstraintLayout>